--- a/index.html
+++ b/index.html
@@ -127,11 +127,11 @@
             </li>
 
             <li>
-              <a href="#package" class="navbar-link" data-nav-link>Historias</a>
+              <a href="#history" class="navbar-link" data-nav-link>Historias</a>
             </li>
 
             <li>
-              <a href="#gallery" class="navbar-link" data-nav-link>Vender</a>
+              <a href="#sell" class="navbar-link" data-nav-link>Vender</a>
             </li>
 
             <li>
@@ -781,7 +781,7 @@
         - #POPULAR
       -->
 
-      <section class="popular" id="destination">
+      <section class="popular" id="history">
         <div class="container">
 
           <p class="section-subtitle"> Descubre nuestros casos de exito </p>
@@ -918,7 +918,7 @@
         - #PACKAGE
       -->
 
-      <section class="package" id="package">
+      <section class="package" id="sell">
         <div class="container">
 
           <p class="section-subtitle">Nuestros productos</p>
