--- a/index.html
+++ b/index.html
@@ -477,7 +477,7 @@
                 </div>
 
                 <div class="tools-img">
-                  <img class="img-tools" width="500px"
+                  <img class="img-tools"
                     src="https://img0.etsystatic.com/site-assets/sell-page/Sell_Page_illustration_ESA.png">
                 </div>
 
