--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
             </li>
 
             <li>
-              <a href="#contact" class="navbar-link" data-nav-link>FAQ</a>
+              <a href="#faq" class="navbar-link" data-nav-link>FAQ</a>
             </li>
 
           </ul>
@@ -203,7 +203,7 @@
               <div class="about-element">
 
                 <div class="img-about-e">
-                  <img src="https://img0.etsystatic.com/site-assets/sell-page/Sell_Page_Icon_Great_Value.svg">
+                  <img src="./assets/images/great_value.svg">
                 </div>
 
                 <div class="img-about-t">
@@ -219,7 +219,7 @@
               <div class="about-element">
 
                 <div class="img-about-e">
-                  <img src="https://img0.etsystatic.com/site-assets/sell-page/Sell_Page_Icon_Tools.svg">
+                  <img src="./assets/images/tools.svg">
                 </div>
 
                 <div class="img-about-t">
@@ -235,7 +235,7 @@
               <div class="about-element">
 
                 <div class="img-about-e">
-                  <img src="https://img0.etsystatic.com/site-assets/sell-page/Sell_Page_Icon_Education.svg">
+                  <img src="./assets/images/herramientas.svg">
                 </div>
 
                 <div class="img-about-t">
@@ -339,7 +339,7 @@
 
             <div class="f-element">
               <div class="f-icon">
-                <img width="50px" class="f-img" src="https://cdn-icons-png.flaticon.com/512/1087/1087080.png">
+                <img width="50px" class="f-img" src="./assets/images/1.png">
               </div>
               <div class="f-text">
                 <div class="title-f">
@@ -358,7 +358,7 @@
             <div class="f-element">
               <div class="f-icon">
                 <img width="50px" class="f-img"
-                  src="https://cdn-icons-png.flaticon.com/512/4334/4334638.png">
+                  src="./assets/images/2.png">
               </div>
               <div class="f-text">
                 <div class="title-f">
@@ -373,7 +373,7 @@
 
             <div class="f-element">
               <div class="f-icon">
-                <img width="50px" class="f-img" src="https://cdn-icons-png.flaticon.com/512/391/391064.png">
+                <img width="50px" class="f-img" src="./assets/images/3.png">
               </div>
               <div class="f-text">
                 <div class="title-f">
@@ -393,7 +393,7 @@
 
           <div class="candado">
             <div class="c-icon">
-              <img class="c-img" src="https://img0.etsystatic.com/site-assets/sell-page/Sell_Page_Icon_Security2.svg">
+              <img class="c-img" src="./assets/images/lock.svg">
             </div>
 
             <div class="c-text">
@@ -613,7 +613,7 @@
 
                   <div class="fet-img">
                     <img width="50px"
-                      src="https://cdn-icons-png.flaticon.com/512/869/869636.png">
+                      src="./assets/images/store.png">
                   </div>
 
                   <div class="fet-text">
@@ -628,7 +628,7 @@
 
                   <div class="fet-img">
                     <img width="50px"
-                      src="https://cdn-icons.flaticon.com/png/512/3591/premium/3591548.png?token=exp=1659064736~hmac=489e4c6491a150ac93b73094edd57459">
+                      src="assets/images/clientes.png">
                   </div>
 
                   <div class="fet-text">
@@ -649,7 +649,7 @@
 
                   <div class="fet-img">
                     <img width="50px"
-                      src="https://cdn-icons.flaticon.com/png/512/2721/premium/2721725.png?token=exp=1659064840~hmac=633510333a96754508cf7c145b8facfc">
+                      src="./assets/images/web.png">
                   </div>
 
                   <div class="fet-text">
@@ -664,7 +664,7 @@
 
                   <div class="fet-img">
                     <img width="50px"
-                      src="https://cdn-icons-png.flaticon.com/512/3390/3390993.png">
+                      src="./assets/images/promotion.png">
                   </div>
 
                   <div class="fet-text">
@@ -709,7 +709,7 @@
               <div class="help-element">
 
                 <div class="help-img">
-                  <img width="100px" src="https://cdn-icons-png.flaticon.com/512/7400/7400540.png">
+                  <img width="100px" src="./assets/images/speak.png">
                 </div>
 
                 <div class="help-text">
@@ -722,7 +722,7 @@
               <div class="help-element">
 
                 <div class="help-img">
-                  <img width="100px" src="https://cdn-icons-png.flaticon.com/512/1534/1534959.png">
+                  <img width="100px" src="./assets/images/advice.png">
                 </div>
 
                 <div class="help-text">
@@ -737,7 +737,7 @@
               <div class="help-element">
 
                 <div class="help-img">
-                  <img width="100px" src="https://cdn-icons-png.flaticon.com/512/1535/1535004.png">
+                  <img width="100px" src="./assets/images/adf.png">
                 </div>
 
                 <div class="help-text">
@@ -819,11 +819,11 @@
                   </p>
 
                   <h3 class="h3 card-title">
-                    <a href="#">Recuerdos</a>
+                    <a href="#">Adornos</a>
                   </h3>
 
                   <p class="card-text">
-                    Fusce hic augue velit wisi ips quibusdam pariatur, iusto.
+                    Te dedicas a crear adornos a medida, pues tienes la oportunidad de expandirte.
                   </p>
 
                 </div>
@@ -859,7 +859,7 @@
                   </h3>
 
                   <p class="card-text">
-                    Fusce hic augue velit wisi ips quibusdam pariatur, iusto.
+                    Vives en una zona turistico y deseas compartir historia, no esperes mas.
                   </p>
 
                 </div>
@@ -895,7 +895,7 @@
                   </h3>
 
                   <p class="card-text">
-                    Fusce hic augue velit wisi ips quibusdam pariatur, iusto.
+                    Tienes replicas de productos historicos, puedes venderlo de igual forma.
                   </p>
 
                 </div>
@@ -926,9 +926,7 @@
           <h2 class="h2 section-title"> Puedes vender cualquier producto </h2>
 
           <p class="section-text">
-            Fusce hic augue velit wisi quibusdam pariatur, iusto primis, nec nemo, rutrum. Vestibulum cumque laudantium.
-            Sit ornare
-            mollitia tenetur, aptent.
+            Te dedicas a la construcción de artesanias, muebles pequeños, productos vintage o simplemente articulos que mejoran la vista de un hogar, entonces es tiempo que empieces a vender tus productos. Descubre como lo hacen ellos:
           </p>
 
           <ul class="package-list">
@@ -1180,9 +1178,7 @@
           <h2 class="h2 section-title">Promoviendo la cultura y la economia</h2>
 
           <p class="section-text">
-            Fusce hic augue velit wisi quibusdam pariatur, iusto primis, nec nemo, rutrum. Vestibulum cumque laudantium.
-            Sit ornare
-            mollitia tenetur, aptent.
+            Desde Quintana Roo hasta Baja California, nuestro México esta lleno de cultura y grandes vendedores.
           </p>
 
           <ul class="gallery-list">
