--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
           <div class="navbar-top">
 
             <a href="#" class="logo">
-              <img src="./assets/images/logo-blue.svg" alt="Tourly logo">
+              <img src="./assets/images/logo.png" alt="Etzy logo">
             </a>
 
             <button class="nav-close-btn" aria-label="Close Menu" data-nav-close-btn>
@@ -253,8 +253,7 @@
 
 
             <p class="callout">
-              "Enimad minim veniam quis nostrud exercitation
-              llamco laboris. Lorem ipsum dolor sit amet"
+              "* Todos estas herramientas aplican unicamente para el pais de origen, ciertos terminos pueden variar"
             </p>
 
 
@@ -1394,9 +1393,7 @@
             </h2>
 
             <p class="section-text">
-              Fusce hic augue velit wisi quibusdam pariatur, iusto primis, nec nemo, rutrum. Vestibulum cumque
-              laudantium. Sit ornare
-              mollitia tenetur, aptent.
+              ¿Tienes dudas?, con gusto podemos ayudarte marcando al siguiente número +52 56-3423-7734
             </p>
           </div>
 
@@ -1462,7 +1459,7 @@
             <li class="contact-item">
               <ion-icon name="mail-outline"></ion-icon>
 
-              <a href="mailto:info.tourly.com" class="contact-link">etzy.com</a>
+              <a href="mailto:etzy.com" class="contact-link">etzy.com</a>
             </li>
 
             <li class="contact-item">
