--- a/index.html
+++ b/index.html
@@ -309,11 +309,11 @@
             <div class="content-features-element">
 
               <div class="element-f">
-                Sin cuotas mensuales adicionales
+                💰 Sin cuotas mensuales adicionales
               </div>
 
               <div class="element-f">
-                Depósitos automáticos
+                💳 Depósitos automáticos
               </div>
 
             </div>
@@ -322,11 +322,11 @@
             <div class="content-features-element">
 
               <div class="element-f">
-                Transacciones seguras
+                ⚖ Transacciones seguras
               </div>
 
               <div class="element-f">
-                Protección del vendedor
+                ⚔ Protección del vendedor
               </div>
 
             </div>
