--- a/index.html
+++ b/index.html
@@ -736,7 +736,7 @@
               <div class="help-element">
 
                 <div class="help-img">
-                  <img width="100px" src="./assets/images/adf.png">
+                  <img width="100px" src="./assets/images/boletin.png">
                 </div>
 
                 <div class="help-text">
