--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
                 </div>
 
                 <div class="img-about-t">
-                  <h2> Gran valor </h2>
+                  <h2> Valor </h2>
                   <p>
                     Publique su primer artículo por menos de $5 pesos solo paga las tarifas de transacción, procesamiento de pagos y publicidad externa cuando realiza una venta.
                   </p>
@@ -253,7 +253,7 @@
 
 
             <p class="callout">
-              "* Todos estas herramientas aplican unicamente para el pais de origen, ciertos terminos pueden variar"
+              "Etsy es el mercado mundial de productos únicos y creativos. Es el hogar de un universo de artículos especiales y extraordinarios, desde piezas únicas hechas a mano hasta tesoros antiguos."
             </p>
 
 
@@ -438,7 +438,7 @@
             <h2 class="h2 section-title">Empecemos a vender</h2>
 
             <p class="about-text">
-              ¡Sí! Envíame ofertas exclusivas, ideas de regalos únicas y consejos personalizados para comprar y vender en Etsy.
+              Descubre y crea con las herramientas que te ofrecemos ideas de regalos únicas y consejos personalizados para comprar y vender en Etsy.
             </p>
 
 
@@ -1157,7 +1157,7 @@
           <h2 class="h2 section-title">Promoviendo la cultura y la economia</h2>
 
           <p class="section-text">
-            Desde Quintana Roo hasta Baja California, nuestro México esta lleno de cultura y grandes vendedores.
+            Desde Quintana Roo hasta Baja California, nuestro México esta lleno de cultura y grandes artistas.
           </p>
 
           <ul class="gallery-list">
