--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
           </div>
 
           <div class="wrapper">
-            <p class="helpline-title">For Further Inquires :</p>
+            <p class="helpline-title">Para más consultas:</p>
 
             <p class="helpline-number">+01 (123) 4567 90</p>
           </div>
@@ -209,7 +209,7 @@
                 <div class="img-about-t">
                   <h2> Valor </h2>
                   <p>
-                    Publique su primer artículo por menos de $5 pesos solo paga las tarifas de transacción, procesamiento de pagos y publicidad externa cuando realiza una venta.
+                    Publique su primer artículo de manera gratuita, solo paga las tarifas de transacción, procesamiento de pagos y publicidad externa cuando realiza una venta.
                   </p>
                   <p> <a href="">Leer mas</a> </p>
                 </div>
@@ -940,10 +940,10 @@
 
                 <div class="card-content">
 
-                  <h3 class="h3 card-title">Wooden World Map Wall Decor</h3>
+                  <h3 class="h3 card-title">Mapa decorativo</h3>
 
                   <p class="card-text">
-                    Wooden World Map Wall Decor, Wood Wall Map, Large Wall Art, Travel Decor, Housewarming Gift, Birthday Anniversary, Gift For Husband
+                    Decoración de pared de mapa del mundo de madera, mapa de pared de madera, arte de pared grande, decoración de viaje, regalo de inauguración de la casa, aniversario de cumpleaños, regalo para el marido.
                   </p>
 
                   <ul class="card-meta-list">
@@ -1009,10 +1009,10 @@
 
                 <div class="card-content">
 
-                  <h3 class="h3 card-title">Personalized Wood Backgammon</h3>
+                  <h3 class="h3 card-title">BACKGAMMON DE MADERA PERSONALIZADO</h3>
 
                   <p class="card-text">
-                    Personalized Wood Backgammon Set with Colorful Design. Custom Wood Board Game as Housewarming Gift. Handmade Board Game. Custom Table Game.
+                    Juego de backgammon de madera personalizado con diseño colorido. Juego de mesa de madera personalizado como regalo de inauguración de la casa. Juego de mesa hecho a mano. Juego de mesa personalizado.
                   </p>
 
                   <ul class="card-meta-list">
@@ -1077,10 +1077,10 @@
 
                 <div class="card-content">
 
-                  <h3 class="h3 card-title">4 pieces Montessori Climbing Set</h3>
+                  <h3 class="h3 card-title">SET DE ESCALADA MONTESSORI 4 PIEZAS</h3>
 
                   <p class="card-text">
-                    4 pieces Montessori Climbing Set - Climbing Arch/Rocker - Climbing/Sliding Ramp - XL Rocker Cushion
+                    Juego de escalada Montessori de 4 piezas - Arco de escalada/Balancín - Rampa de escalada/deslizamiento - Cojín balancín XL
                   </p>
 
                   <ul class="card-meta-list">
@@ -1098,7 +1098,7 @@
                       <div class="meta-box">
                         <ion-icon name="location"></ion-icon>
 
-                        <p class="text">Malaysia</p>
+                        <p class="text">EUA</p>
                       </div>
                     </li>
 
